--- a/final.ipynb
+++ b/final.ipynb
@@ -1309,7 +1309,11 @@
    "source": [
     "##### Medical Specialty\n",
     "\n",
-    "For the medical specialty column, we do not directly drop it, as some specialists' partients may have more chance of being readmitted than others'. Hence to tackle null values there, we impute the null values with a new value - \"No-admitting-Physician\"."
+    "For the medical specialty column, we do not directly drop it, as some specialists' partients may have more chance of being readmitted than others'. Hence to tackle null values there, we impute the null values with a new value - \"No-admitting-Physician\".\n",
+    "\n",
+    "This assumption is supported by the image below\n",
+    "\n",
+    "![Medical Specialty](./images/Medical%20Specialty.png)"
    ]
   },
   {
@@ -1606,6 +1610,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Diag Groupings\n",
+    "\n",
+    "The columns for diag_1, diag_2, diag_3 have a lot of categorical values, which we have grouped referring to the following website listing the groupings of ICD codes.\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/List_of_ICD-9_codes\n",
+    "\n",
+    "We decided to drop the diag_1 column, and keep the other two, based on the following plots made in Tableau, which show the variation of the data with the columns. Readmission_id did not vary much with diag_1, hence we dropped it.\n",
+    "\n",
+    "![Diag_1_group](./images/Diag_1_group.png)\n",
+    "\n",
+    "![Diag_1_group](./images/Diag_2_group.png)\n",
+    "\n",
+    "![Diag_1_group](./images/Diag_3_group.png)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1631,15 +1654,6 @@
     "    16: range(780,800),\n",
     "    17: range(800,1000)\n",
     "}\n",
-    "\n",
-    "def diag_convert1(row):\n",
-    "    if str(row['diag_1'])[0] in ['E','V']:\n",
-    "        return 18\n",
-    "    else:\n",
-    "        for j in diag_grouping_dict.keys():\n",
-    "            if floor(float(row['diag_1'])) in diag_grouping_dict[j]:\n",
-    "                return j\n",
-    "\n",
     "\n",
     "def diag_convert2(row):\n",
     "    if str(row['diag_2'])[0] in ['E','V']:\n",
@@ -1668,12 +1682,7 @@
     "df.fillna(\"0\", inplace=True)\n",
     "test_df.fillna(\"0\", inplace=True)\n",
     "\n",
-    "# new_col = df.apply(diag_convert1, axis=1)\n",
-    "# df.insert(loc = len(df.columns)-1, column = 'diag_1_new', value=new_col)\n",
     "df.drop(columns=['diag_1'], inplace=True)\n",
-    "\n",
-    "# new_col = test_df.apply(diag_convert1, axis=1)\n",
-    "# test_df.insert(loc = len(test_df.columns), column = 'diag_1_new', value=new_col)\n",
     "test_df.drop(columns=['diag_1'], inplace=True)\n",
     "\n",
     "new_col = df.apply(diag_convert2, axis=1)\n",
@@ -1691,6 +1700,13 @@
     "new_col = test_df.apply(diag_convert3, axis=1)\n",
     "test_df.insert(loc = len(test_df.columns), column = 'diag_3_new', value=new_col)\n",
     "test_df.drop(columns=['diag_3'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another possibility we had considered was to drop diag_1, diag_2, diag_3 altogether, and instead replace it with a new column, which captures some of the information of the columns. However this did not bring about better results, so we dropped it."
    ]
   },
   {
@@ -1742,6 +1758,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Race and Gender\n",
+    "\n",
+    "Finally, using the plots below, we realised that the race and gender of the person did not affect the values of readmission_id observed, hence we felt it better to drop these two columns.\n",
+    "\n",
+    "Our claims are supported by the charts below.\n",
+    "\n",
+    "\n",
+    "![Gender](./images/Gender.png)\n",
+    "\n",
+    "![Race](./images/Race.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1750,6 +1782,154 @@
     "df.drop(columns=['race','gender'], inplace=True)\n",
     "test_df.drop(columns=['race','gender'], inplace=True)\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Engineering new features\n",
+    "\n",
+    "We also made some new features which we thought would better capture the data. \n",
+    "\n",
+    "1. Admission_type_id_new - here we grouped the various values in the columns as given in admission_grouping_dict to reduce the number of categories.\n",
+    "2. Discharge_type_id_new - similar as previous. We grouped them based on which categories broadly fell into the same umbrella according to our understanding. \n",
+    "3. Admission_source_id_new - similar as previous.\n",
+    "\n",
+    "The mapping of the number to the category is as follows -\n",
+    "\n",
+    "\n",
+    "admission_type_id,description\n",
+    "\n",
+    "1,  Emergency\n",
+    "\n",
+    "2,  Urgent\n",
+    "\n",
+    "3,  Elective\n",
+    "\n",
+    "4,  Newborn\n",
+    "\n",
+    "5,  Not Available\n",
+    "\n",
+    "6,  NULL\n",
+    "\n",
+    "7,  Trauma Center\n",
+    "\n",
+    "8,  Not Mapped\n",
+    "\n",
+    "discharge_disposition_id,description\n",
+    "\n",
+    "1,  Discharged to home\n",
+    "\n",
+    "2,  Discharged/transferred to another short term hospital\n",
+    "\n",
+    "3,  Discharged/transferred to SNF(Skilled Nursing Facility).\n",
+    "\n",
+    "4,  Discharged/transferred to ICF(Intermediate Care Facility).\n",
+    "\n",
+    "5,  Discharged/transferred to another type of inpatient care institution\n",
+    "\n",
+    "6,  Discharged/transferred to home with home health service\n",
+    "\n",
+    "7,  Left AMA (American Medical Association)\n",
+    "\n",
+    "8,  Discharged/transferred to home under care of Home IV provider\n",
+    "\n",
+    "9,  Admitted as an inpatient to this hospital\n",
+    "\n",
+    "10, Neonate discharged to another hospital for neonatal aftercare\n",
+    "\n",
+    "11, Expired\n",
+    "\n",
+    "12, Still patient or expected to return for outpatient services\n",
+    "\n",
+    "13, Hospice(Nursing Home for ill/old) / home\n",
+    "\n",
+    "14, Hospice / medical facility\n",
+    "\n",
+    "15, Discharged/transferred within this institution to Medicare approved swing bed\n",
+    "\n",
+    "16, Discharged/transferred/referred another institution for outpatient services\n",
+    "\n",
+    "17, Discharged/transferred/referred to this institution for outpatient services\n",
+    "\n",
+    "18, NULL\n",
+    "\n",
+    "19, \"Expired at home. Medicaid only, hospice.\"\n",
+    "\n",
+    "20, \"Expired in a medical facility. Medicaid only, hospice.\"\n",
+    "\n",
+    "21, \"Expired, place unknown. Medicaid only, hospice.\"\n",
+    "\n",
+    "22, Discharged/transferred to another rehab fac including rehab units of a hospital .\n",
+    "\n",
+    "23, Discharged/transferred to a long term care hospital.\n",
+    "\n",
+    "24, Discharged/transferred to a nursing facility certified under Medicaid but not certified under Medicare.\n",
+    "\n",
+    "25, Not Mapped\n",
+    "\n",
+    "26, Unknown/Invalid\n",
+    "\n",
+    "30, Discharged/transferred to another Type of Health Care Institution not Defined Elsewhere\n",
+    "\n",
+    "27, Discharged/transferred to a federal health care facility.\n",
+    "\n",
+    "28, Discharged/transferred/referred to a psychiatric hospital of psychiatric distinct part unit of a hospital\n",
+    "\n",
+    "29, Discharged/transferred to a Critical Access Hospital (CAH).\n",
+    "\n",
+    "admission_source_id,description\n",
+    "\n",
+    "1,  Physician Referral\n",
+    "\n",
+    "2,  Clinic Referral\n",
+    "\n",
+    "3,  HMO Referral\n",
+    "\n",
+    "4,  Transfer from a hospital\n",
+    "\n",
+    "5,  Transfer from a Skilled Nursing Facility (SNF)\n",
+    "\n",
+    "6,  Transfer from another health care facility\n",
+    "\n",
+    "7,  Emergency Room\n",
+    "\n",
+    "8,  Court/Law Enforcement\n",
+    "\n",
+    "9,  Not Available\n",
+    "\n",
+    "10, Transfer from critial access hospital\n",
+    "\n",
+    "11, Normal Delivery\n",
+    "\n",
+    "12, Premature Delivery\n",
+    "\n",
+    "13, Sick Baby\n",
+    "\n",
+    "14, Extramural Birth\n",
+    "\n",
+    "15, Not Available\n",
+    "\n",
+    "17, NULL\n",
+    "\n",
+    "18, Transfer From Another Home Health Agency\n",
+    "\n",
+    "19, Readmission to Same Home Health Agency\n",
+    "\n",
+    "20, Not Mapped\n",
+    "\n",
+    "21, Unknown/Invalid\n",
+    "\n",
+    "22, Transfer from hospital inpt/same fac reslt in a sep claim\n",
+    "\n",
+    "23, Born inside this hospital\n",
+    "\n",
+    "24, Born outside this hospital\n",
+    "\n",
+    "25, Transfer from Ambulatory Surgery Center\n",
+    "\n",
+    "26, Transfer from Hospice,"
    ]
   },
   {
@@ -2743,6 +2923,13 @@
     "\n",
     "temp_df = df.groupby(by=['admission_source_id_new'])\n",
     "temp_df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Service_utilization"
    ]
   },
   {
