--- a/final.ipynb
+++ b/final.ipynb
@@ -3226,7 +3226,20 @@
     "\n",
     "![Splom](./images/scatterplot_matrix.png)\n",
     "\n",
-    "![Covariance](./images/covariance.png)"
+    "![Covariance](./images/covariance.png)\n",
+    "\n",
+    "![Admission_type_id](./images/Admission_type_id.png)\n",
+    "\n",
+    "![Discharge_disposition_id](./images/Discharge_disposition_id.png)\n",
+    "\n",
+    "![Admission_source_id](./images/Admission_source_id.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The other plots can be found in the images directory. We weren't able to infer much from them, and hence they weren't included in the report."
    ]
   },
   {
