--- a/final.ipynb
+++ b/final.ipynb
@@ -1309,7 +1309,7 @@
    "source": [
     "##### Medical Specialty\n",
     "\n",
-    "For the medical specialty column, we do not directly drop it, as some specialists' partients may have more chance of being readmitted than others'. Hence to tackle null values there, we impute the null values with a new value - \"No-admitting-Physician\".\n",
+    "For the medical specialty column, we do not directly drop it, as some specialists' patients may have more chance of being readmitted than others'. Hence to tackle null values there, we impute the null values with a new value - \"No-admitting-Physician\".\n",
     "\n",
     "This assumption is supported by the image below\n",
     "\n",
