--- a/final.ipynb
+++ b/final.ipynb
@@ -3665,11 +3665,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cm = confusion_matrix(Y_test, y_pred, labels=xgb.classes_)\n",
-    "disp = ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=xgb.classes_)\n",
-    "disp.plot()\n",
-    "plt.show()\n",
-    "print(accuracy_score(y_pred, Y_test))"
+    "# cm = confusion_matrix(Y_test, y_pred, labels=xgb.classes_)\n",
+    "# disp = ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=xgb.classes_)\n",
+    "# disp.plot()\n",
+    "# plt.show()\n",
+    "# print(accuracy_score(y_pred, Y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Confusion_matrix](./images/confusion_matrix.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "1. List of ICD-9 codes : https://en.wikipedia.org/wiki/List_of_ICD-9_codes\n",
+    "2. Optuna documentation : https://optuna.readthedocs.io/en/stable/\n",
+    "3. Pandas documentation : https://pandas.pydata.org/docs/\n",
+    "4. Numpy documentation : https://numpy.org/doc/1.26/user/index.html\n",
+    "5. Matplotlib.pyplot documentation : https://matplotlib.org/stable/users/index.html\n",
+    "6. Scikit learn documentation : https://scikit-learn.org/stable/\n",
+    "7. Seaborn documentation : https://seaborn.pydata.org/tutorial.html\n",
+    "8. Plotly documentation : https://plotly.com/python/plotly-fundamentals/\n"
    ]
   }
  ],
@@ -3689,7 +3711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "0.0.0"
   }
  },
  "nbformat": 4,
