Report for Neural Network Done

--- a/endterm project/NN.ipynb
+++ b/endterm project/NN.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hospital Readmission Prediction - Neural Networks\n",
+    "\n",
+    "This notebook contain the code for Candian Hospital Re-Admission using neural networks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 294,
    "metadata": {},
@@ -30,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reading the appropriate data and storing it in the dataframe.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 295,
    "metadata": {},
@@ -50,6 +66,13 @@
     "# for col in X.columns:\n",
     "#     if (col == 'readmission_id'):\n",
     "#         print(col)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Code for Neural Network with 4 input layers and one ouput layers."
    ]
   },
   {
@@ -140,6 +163,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Doing the required test,train split with 80:20 ration respectively."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 299,
    "metadata": {},
@@ -184,6 +214,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Passing the split data into the custom Data class for organization."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 301,
    "metadata": {},
@@ -194,6 +231,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setting the batch size."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 302,
    "metadata": {},
@@ -201,6 +245,13 @@
    "source": [
     "train_batchsize = 512\n",
     "val_batchsize = 512"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Loading the data into DataLoaded which will then make it useful for loading and handling the pre-processed data into the neural networks."
    ]
   },
   {
@@ -259,6 +310,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using `Adam` optimizer and `Cross Entorpy Loss` for fitting of our model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 307,
    "metadata": {},
@@ -277,6 +335,13 @@
    "outputs": [],
    "source": [
     "sanity_check=False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Epoch Code that takes cares of each iteration and uses the Adam optimizer defined above."
    ]
   },
   {
@@ -335,6 +400,13 @@
     "    f1 = f1_score(y_true=truths, y_pred=predictions, average='macro')\n",
     "\n",
     "    return total_loss, acc, f1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training Model code"
    ]
   },
   {
@@ -646,6 +718,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting the last output and putting it through the `SoftMax` to get the required probabilities."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 313,
    "metadata": {},
@@ -670,6 +749,13 @@
    "source": [
     "output_probs = nn.Softmax(dim=-1)(model(test_data))\n",
     "output_probs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting the max probabilities for the accurate class prediction."
    ]
   },
   {
@@ -728,6 +814,13 @@
    ],
    "source": [
     "print(accuracy_score(vals, actual))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using Optuna for hyper-parameter tuning of the trained model."
    ]
   },
   {
@@ -3580,6 +3673,13 @@
     "preds = torch.max(output_probs.data, 1)\n",
     "vals = preds.indices.numpy()\n",
     "vals"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting the output and then storing the ouput in submission2.csv file for submission"
    ]
   },
   {
