--- a/endterm project/preprocessing.ipynb
+++ b/endterm project/preprocessing.ipynb
@@ -3499,6 +3499,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We remove the standart scaling of data to main the original data as it is."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -3954,6 +3961,15 @@
     "\n",
     "input_encoded['readmission_id'] = labels\n",
     "input_encoded"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once all the pre-processing is done then we put the data into:\n",
+    "1) preprocessed_data.csv\n",
+    "2) test_data.csv \n"
    ]
   },
   {
