--- a/endterm project/SVM_new.ipynb
+++ b/endterm project/SVM_new.ipynb
@@ -11,7 +11,8 @@
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.svm import SVC\n",
-        "from sklearn.metrics import accuracy_score"
+        "from sklearn.metrics import accuracy_score\n",
+        "import optuna"
       ]
     },
     {
@@ -52,11 +53,11 @@
         }
       ],
       "source": [
-        "svm_poly = SVC(kernel='poly', degree=3, random_state=42)\n",
-        "svm_poly.fit(X_train, y_train)\n",
-        "y_pred_poly = svm_poly.predict(X_val)\n",
-        "accuracy_poly = accuracy_score(y_val, y_pred_poly)\n",
-        "print(f'Polynomial Kernel Accuracy: {accuracy_poly}')"
+        "# svm_poly = SVC(kernel='poly', degree=3, random_state=42)\n",
+        "# svm_poly.fit(X_train, y_train)\n",
+        "# y_pred_poly = svm_poly.predict(X_val)\n",
+        "# accuracy_poly = accuracy_score(y_val, y_pred_poly)\n",
+        "# print(f'Polynomial Kernel Accuracy: {accuracy_poly}')"
       ]
     },
     {
@@ -79,12 +80,52 @@
         }
       ],
       "source": [
-        "# SVM with RBF Kernel\n",
-        "svm_rbf = SVC(kernel='rbf', random_state=42)\n",
-        "svm_rbf.fit(X_train, y_train)\n",
-        "y_pred_rbf = svm_rbf.predict(X_val)\n",
-        "accuracy_rbf = accuracy_score(y_val, y_pred_rbf)\n",
-        "print(f'RBF Kernel Accuracy: {accuracy_rbf}')"
+        "# svm_rbf = SVC(kernel='rbf', random_state=42)\n",
+        "# svm_rbf.fit(X_train, y_train)\n",
+        "# y_pred_rbf = svm_rbf.predict(X_val)\n",
+        "# accuracy_rbf = accuracy_score(y_val, y_pred_rbf)\n",
+        "# print(f'RBF Kernel Accuracy: {accuracy_rbf}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Define the objective function for SVM and hyperparameter tuning\n",
+        "def objective(trial):\n",
+        "    C = trial.suggest_loguniform('C', 1e-5, 1e2)\n",
+        "    gamma = trial.suggest_loguniform('gamma', 1e-5, 1e2)\n",
+        "\n",
+        "    svm = SVC(C=C, gamma=gamma, kernel='rbf', random_state=42)\n",
+        "    svm.fit(X_train, y_train)\n",
+        "    \n",
+        "    preds = svm.predict(X_val)\n",
+        "    acc = accuracy_score(y_val, preds)\n",
+        "    return acc"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "study = optuna.create_study(direction='maximize')\n",
+        "study.optimize(objective, n_trials=10)\n",
+        "\n",
+        "best_params = study.best_params\n",
+        "print(\"Best hyperparameters:\", best_params)\n",
+        "\n",
+        "# Train SVM using the best hyperparameters\n",
+        "best_svm = SVC(C=best_params['C'], gamma=best_params['gamma'], kernel='rbf', random_state=42)\n",
+        "best_svm.fit(X_train, y_train)\n",
+        "\n",
+        "# Evaluate the best SVM model\n",
+        "preds = best_svm.predict(X_val)\n",
+        "acc = accuracy_score(y_val, preds)\n",
+        "print(f\"Accuracy: {acc}\")"
       ]
     },
     {
@@ -94,7 +135,7 @@
       "outputs": [],
       "source": [
         "X_test = pd.read_csv(\"./test_data.csv\")\n",
-        "test_predictions_rbf = svm_rbf.predict(X_test)"
+        "test_predictions_rbf = best_svm.predict(X_test)"
       ]
     },
     {
