Ensemble code added

--- a/endterm project/NN.ipynb
+++ b/endterm project/NN.ipynb
@@ -3690,7 +3690,20 @@
    "source": [
     "df_output = pd.read_csv(\"./canadian-hospital-re-admittance-challenge/sample_submission.csv\")\n",
     "df_output[\"readmission_id\"] = vals\n",
-    "df_output.to_csv(\"submission2.csv\", index=False)"
+    "df_output.to_csv(\"submission_nn.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "1. List of ICD-9 codes : https://en.wikipedia.org/wiki/List_of_ICD-9_codes\n",
+    "2. Optuna documentation : https://optuna.readthedocs.io/en/stable/\n",
+    "3. Pandas documentation : https://pandas.pydata.org/docs/\n",
+    "4. Numpy documentation : https://numpy.org/doc/1.26/user/index.html\n",
+    "5. Scikit learn documentation : https://scikit-learn.org/stable/\n",
+    "6. Pytorch documentation : https://pytorch.org/docs/stable/index.html"
    ]
   }
  ],
