--- a/endterm project/preprocessing.ipynb
+++ b/endterm project/preprocessing.ipynb
@@ -3981,6 +3981,19 @@
     "input_encoded.to_csv(\"processed_data.csv\", index=False)\n",
     "test_encoded.to_csv(\"test_data.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "1. List of ICD-9 codes : https://en.wikipedia.org/wiki/List_of_ICD-9_codes\n",
+    "2. Pandas documentation : https://pandas.pydata.org/docs/\n",
+    "3. Numpy documentation : https://numpy.org/doc/1.26/user/index.html\n",
+    "4. Matplotlib.pyplot documentation : https://matplotlib.org/stable/users/index.html\n",
+    "5. Seaborn documentation : https://seaborn.pydata.org/tutorial.html\n",
+    "6. Plotly documentation : https://plotly.com/python/plotly-fundamentals/"
+   ]
   }
  ],
  "metadata": {
