Report for SVMs added

--- a/endterm project/SVM_new.ipynb
+++ b/endterm project/SVM_new.ipynb
@@ -1,6 +1,15 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Hospital Readmission Prediction - Support Vector Machine\n",
+        "\n",
+        "This notebook contain the code for Candian Hospital Re-Admission using support vector machines."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -22,6 +31,13 @@
       "outputs": [],
       "source": [
         "train_data = pd.read_csv(\"./processed_data.csv\")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We then did that appropriate model, and then did the test,train split with 80:20 ratio."
       ]
     },
     {
@@ -85,6 +101,13 @@
         "# y_pred_rbf = svm_rbf.predict(X_val)\n",
         "# accuracy_rbf = accuracy_score(y_val, y_pred_rbf)\n",
         "# print(f'RBF Kernel Accuracy: {accuracy_rbf}')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Used Optuna to tune the hyper parameter and then get the best accuracy."
       ]
     },
     {
