--- a/endterm project/ensemble.ipynb
+++ b/endterm project/ensemble.ipynb
@@ -219,7 +219,7 @@
    "source": [
     "test_Y = xgb.predict(test_encoded)\n",
     "\n",
-    "df_output = pd.read_csv(\"./sample_submission.csv\")\n",
+    "df_output = pd.read_csv(\"../canadian-hospital-re-admittance-challenge/sample_submission.csv\")\n",
     "df_output[\"readmission_id\"] = test_Y\n",
     "df_output.to_csv(\"submission_xg.csv\", index=False)"
    ]
